remediation/network-ec2-vpc/fix-prowler_ec2_networkacl_allow_ingress_tcp_port_3389_arn_aws_ec2_us_west_2_132410971304_network_acl_acl_01c3b6a34d02b0c30_us_west_2.tf
resource "aws_network_acl_rule" "fix_network_acl_ingress_deny_1052c27888" {
  network_acl_id = "acl-01c3b6a34d02b0c30"
  egress         = false
  rule_number    = 252
  protocol       = "6"
  rule_action    = "deny"
  cidr_block     = "0.0.0.0/0"
  from_port      = 3389
  to_port        = 3389
  lifecycle {
    ignore_changes = [icmp_type, icmp_code]
  }
}
